init base contents

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,278 @@
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="fragment_horizontal_margin">16dp</dimen>
-    <dimen name="fragment_vertical_margin">16dp</dimen>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
+    <dimen name="dimen_am_10dp">-10.00dp</dimen>
+    <dimen name="dimen_am_35dp">-35.00dp</dimen>
+    <dimen name="dimen_0dp">0dp</dimen>
+    <dimen name="dimen_0.5dp">0.5dp</dimen>
+    <dimen name="dimen_0.8dp">0.8dp</dimen>
+    <dimen name="dimen_1dp">1.00dp</dimen>
+    <dimen name="dimen_1_am_dp">-1.00dp</dimen>
+    <dimen name="dimen_2dp">2.00dp</dimen>
+    <dimen name="dimen_2_am_dp">-2.00dp</dimen>
+    <dimen name="dimen_3dp">3.00dp</dimen>
+    <dimen name="dimen_4dp">4.00dp</dimen>
+    <dimen name="dimen_5dp">5.00dp</dimen>
+    <dimen name="dimen_6dp">6.00dp</dimen>
+    <dimen name="dimen_7dp">7.00dp</dimen>
+    <dimen name="dimen_8dp">8.00dp</dimen>
+    <dimen name="dimen_9dp">9.00dp</dimen>
+    <dimen name="dimen_10dp">10.00dp</dimen>
+    <dimen name="dimen_11dp">11.00dp</dimen>
+    <dimen name="dimen_12dp">12.00dp</dimen>
+    <dimen name="dimen_13dp">13.00dp</dimen>
+    <dimen name="dimen_14dp">14.00dp</dimen>
+    <dimen name="dimen_15dp">15.00dp</dimen>
+    <dimen name="dimen_4_am_dp">-4.00dp</dimen>
+    <dimen name="dimen_5_am_dp">-5.00dp</dimen>
+    <dimen name="dimen_6_am_dp">-6.00dp</dimen>
+    <dimen name="dimen_8_am_dp">-8.00dp</dimen>
+    <dimen name="dimen_10_am_dp">-10.00dp</dimen>
+    <dimen name="dimen_12_am_dp">-12.00dp</dimen>
+    <dimen name="dimen_14_am_dp">-14.00dp</dimen>
+    <dimen name="dimen_16_am_dp">-16.00dp</dimen>
+    <dimen name="dimen_20_am_dp">-20.00dp</dimen>
+    <dimen name="dimen_25_am_dp">-25.00dp</dimen>
+    <dimen name="dimen_30_am_dp">-30.00dp</dimen>
+    <dimen name="dimen_78_am_dp">-78.00dp</dimen>
+    <dimen name="dimen_50_am_dp">-50.00dp</dimen>
+    <dimen name="dimen_32_am_dp">-32.00dp</dimen>
+    <dimen name="dimen_66_am_dp">-66.00dp</dimen>
+    <dimen name="dimen_48_am_dp">-48.00dp</dimen>
+    <dimen name="dimen_16dp">16.00dp</dimen>
+    <dimen name="dimen_17dp">17.00dp</dimen>
+    <dimen name="dimen_18dp">18.00dp</dimen>
+    <dimen name="dimen_19dp">19.00dp</dimen>
+    <dimen name="dimen_20dp">20.00dp</dimen>
+    <dimen name="dimen_21dp">21.00dp</dimen>
+    <dimen name="dimen_22dp">22.00dp</dimen>
+    <dimen name="dimen_23dp">23.00dp</dimen>
+    <dimen name="dimen_24dp">24.00dp</dimen>
+    <dimen name="dimen_25dp">25.00dp</dimen>
+    <dimen name="dimen_26dp">26.00dp</dimen>
+    <dimen name="dimen_27dp">27.00dp</dimen>
+    <dimen name="dimen_28dp">28.00dp</dimen>
+    <dimen name="dimen_29dp">29.00dp</dimen>
+    <dimen name="dimen_30dp">30.00dp</dimen>
+    <dimen name="dimen_31dp">31.00dp</dimen>
+    <dimen name="dimen_32dp">32.00dp</dimen>
+    <dimen name="dimen_33dp">33.00dp</dimen>
+    <dimen name="dimen_34dp">34.00dp</dimen>
+    <dimen name="dimen_35dp">35.00dp</dimen>
+    <dimen name="dimen_36dp">36.00dp</dimen>
+    <dimen name="dimen_37dp">37.00dp</dimen>
+    <dimen name="dimen_38dp">38.00dp</dimen>
+    <dimen name="dimen_39dp">39.00dp</dimen>
+    <dimen name="dimen_40dp">40.00dp</dimen>
+    <dimen name="dimen_41dp">41.00dp</dimen>
+    <dimen name="dimen_42dp">42.00dp</dimen>
+    <dimen name="dimen_43dp">43.00dp</dimen>
+    <dimen name="dimen_44dp">44.00dp</dimen>
+    <dimen name="dimen_45dp">45.00dp</dimen>
+    <dimen name="dimen_46dp">46.00dp</dimen>
+    <dimen name="dimen_47dp">47.00dp</dimen>
+    <dimen name="dimen_48dp">48.00dp</dimen>
+    <dimen name="dimen_49dp">49.00dp</dimen>
+    <dimen name="dimen_50dp">50.00dp</dimen>
+    <dimen name="dimen_51dp">51.00dp</dimen>
+    <dimen name="dimen_52dp">52.00dp</dimen>
+    <dimen name="dimen_53dp">53.00dp</dimen>
+    <dimen name="dimen_54dp">54.00dp</dimen>
+    <dimen name="dimen_55dp">55.00dp</dimen>
+    <dimen name="dimen_56dp">56.00dp</dimen>
+    <dimen name="dimen_57dp">57.00dp</dimen>
+    <dimen name="dimen_58dp">58.00dp</dimen>
+    <dimen name="dimen_59dp">59.00dp</dimen>
+    <dimen name="dimen_60dp">60.00dp</dimen>
+    <dimen name="dimen_61dp">61.00dp</dimen>
+    <dimen name="dimen_62dp">62.00dp</dimen>
+    <dimen name="dimen_63dp">63.00dp</dimen>
+    <dimen name="dimen_64dp">64.00dp</dimen>
+    <dimen name="dimen_65dp">65.00dp</dimen>
+    <dimen name="dimen_66dp">66.00dp</dimen>
+    <dimen name="dimen_67dp">67.00dp</dimen>
+    <dimen name="dimen_68dp">68.00dp</dimen>
+    <dimen name="dimen_69dp">69.00dp</dimen>
+    <dimen name="dimen_70dp">70.00dp</dimen>
+    <dimen name="dimen_71dp">71.00dp</dimen>
+    <dimen name="dimen_72dp">72.00dp</dimen>
+    <dimen name="dimen_73dp">73.00dp</dimen>
+    <dimen name="dimen_74dp">74.00dp</dimen>
+    <dimen name="dimen_75dp">75.00dp</dimen>
+    <dimen name="dimen_76dp">76.00dp</dimen>
+    <dimen name="dimen_77dp">77.00dp</dimen>
+    <dimen name="dimen_78dp">78.00dp</dimen>
+    <dimen name="dimen_79dp">79.00dp</dimen>
+    <dimen name="dimen_80dp">80.00dp</dimen>
+    <dimen name="dimen_81dp">81.00dp</dimen>
+    <dimen name="dimen_82dp">82.00dp</dimen>
+    <dimen name="dimen_83dp">83.00dp</dimen>
+    <dimen name="dimen_84dp">84.00dp</dimen>
+    <dimen name="dimen_85dp">85.00dp</dimen>
+    <dimen name="dimen_86dp">86.00dp</dimen>
+    <dimen name="dimen_87dp">87.00dp</dimen>
+    <dimen name="dimen_88dp">88.00dp</dimen>
+    <dimen name="dimen_89dp">89.00dp</dimen>
+    <dimen name="dimen_90dp">90.00dp</dimen>
+    <dimen name="dimen_91dp">91.00dp</dimen>
+    <dimen name="dimen_92dp">92.00dp</dimen>
+    <dimen name="dimen_93dp">93.00dp</dimen>
+    <dimen name="dimen_94dp">94.00dp</dimen>
+    <dimen name="dimen_95dp">95.00dp</dimen>
+    <dimen name="dimen_96dp">96.00dp</dimen>
+    <dimen name="dimen_97dp">97.00dp</dimen>
+    <dimen name="dimen_98dp">98.00dp</dimen>
+    <dimen name="dimen_99dp">99.00dp</dimen>
+    <dimen name="dimen_100dp">100.00dp</dimen>
+    <dimen name="dimen_101dp">101.00dp</dimen>
+    <dimen name="dimen_102dp">102.00dp</dimen>
+    <dimen name="dimen_1025dp">102.50dp</dimen>
+    <dimen name="dimen_103dp">103.00dp</dimen>
+    <dimen name="dimen_104dp">104.00dp</dimen>
+    <dimen name="dimen_105dp">105.00dp</dimen>
+    <dimen name="dimen_106dp">106.00dp</dimen>
+    <dimen name="dimen_107dp">107.00dp</dimen>
+    <dimen name="dimen_108dp">108.00dp</dimen>
+    <dimen name="dimen_109dp">109.00dp</dimen>
+    <dimen name="dimen_110dp">110.00dp</dimen>
+    <dimen name="dimen_111dp">111.00dp</dimen>
+    <dimen name="dimen_112dp">112.00dp</dimen>
+    <dimen name="dimen_113dp">113.00dp</dimen>
+    <dimen name="dimen_114dp">114.00dp</dimen>
+    <dimen name="dimen_115dp">115.00dp</dimen>
+    <dimen name="dimen_116dp">116.00dp</dimen>
+    <dimen name="dimen_117dp">117.00dp</dimen>
+    <dimen name="dimen_118dp">118.00dp</dimen>
+    <dimen name="dimen_119dp">119.00dp</dimen>
+    <dimen name="dimen_120dp">120.00dp</dimen>
+    <dimen name="dimen_121dp">121.00dp</dimen>
+    <dimen name="dimen_122dp">122.00dp</dimen>
+    <dimen name="dimen_123dp">123.00dp</dimen>
+    <dimen name="dimen_124dp">124.00dp</dimen>
+    <dimen name="dimen_125dp">125.00dp</dimen>
+    <dimen name="dimen_126dp">126.00dp</dimen>
+    <dimen name="dimen_127dp">127.00dp</dimen>
+    <dimen name="dimen_128dp">128.00dp</dimen>
+    <dimen name="dimen_129dp">129.00dp</dimen>
+    <dimen name="dimen_130dp">130.00dp</dimen>
+    <dimen name="dimen_131dp">131.00dp</dimen>
+    <dimen name="dimen_132dp">132.00dp</dimen>
+    <dimen name="dimen_133dp">133.00dp</dimen>
+    <dimen name="dimen_134dp">134.00dp</dimen>
+    <dimen name="dimen_135dp">135.00dp</dimen>
+    <dimen name="dimen_136dp">136.00dp</dimen>
+    <dimen name="dimen_137dp">137.00dp</dimen>
+    <dimen name="dimen_138dp">138.00dp</dimen>
+    <dimen name="dimen_139dp">139.00dp</dimen>
+    <dimen name="dimen_140dp">140.00dp</dimen>
+    <dimen name="dimen_141dp">141.00dp</dimen>
+    <dimen name="dimen_142dp">142.00dp</dimen>
+    <dimen name="dimen_143dp">143.00dp</dimen>
+    <dimen name="dimen_144dp">144.00dp</dimen>
+    <dimen name="dimen_145dp">145.00dp</dimen>
+    <dimen name="dimen_146dp">146.00dp</dimen>
+    <dimen name="dimen_147dp">147.00dp</dimen>
+    <dimen name="dimen_148dp">148.00dp</dimen>
+    <dimen name="dimen_149dp">149.00dp</dimen>
+    <dimen name="dimen_150dp">150.00dp</dimen>
+    <dimen name="dimen_151dp">151.00dp</dimen>
+    <dimen name="dimen_152dp">152.00dp</dimen>
+    <dimen name="dimen_163dp">163.00dp</dimen>
+    <dimen name="dimen_165dp">165.00dp</dimen>
+    <dimen name="dimen_166dp">166.00dp</dimen>
+    <dimen name="dimen_168dp">168.00dp</dimen>
+    <dimen name="dimen_170dp">170.00dp</dimen>
+    <dimen name="dimen_180dp">180.00dp</dimen>
+    <dimen name="dimen_184dp">184.00dp</dimen>
+    <dimen name="dimen_178dp">178.00dp</dimen>
+    <dimen name="dimen_200dp">200.00dp</dimen>
+    <dimen name="dimen_205dp">205.00dp</dimen>
+    <dimen name="dimen_204dp">204.00dp</dimen>
+    <dimen name="dimen_208dp">208.00dp</dimen>
+    <dimen name="dimen_212dp">212.00dp</dimen>
+    <dimen name="dimen_215dp">215.00dp</dimen>
+    <dimen name="dimen_217dp">217.00dp</dimen>
+    <dimen name="dimen_220dp">220.00dp</dimen>
+    <dimen name="dimen_221dp">221.00dp</dimen>
+    <dimen name="dimen_229dp">229.00dp</dimen>
+    <dimen name="dimen_235dp">235.00dp</dimen>
+    <dimen name="dimen_240dp">240.00dp</dimen>
+    <dimen name="dimen_243dp">243.00dp</dimen>
+    <dimen name="dimen_250dp">250.00dp</dimen>
+    <dimen name="dimen_251dp">251.00dp</dimen>
+    <dimen name="dimen_254dp">254.00dp</dimen>
+    <dimen name="dimen_259dp">259.00dp</dimen>
+    <dimen name="dimen_260dp">260.00dp</dimen>
+    <dimen name="dimen_270dp">270.00dp</dimen>
+    <dimen name="dimen_275dp">275.00dp</dimen>
+    <dimen name="dimen_276dp">276.00dp</dimen>
+    <dimen name="dimen_280dp">280.00dp</dimen>
+    <dimen name="dimen_296dp">296.00dp</dimen>
+    <dimen name="dimen_290dp">290.00dp</dimen>
+    <dimen name="dimen_297dp">297.00dp</dimen>
+    <dimen name="dimen_298dp">298.00dp</dimen>
+    <dimen name="dimen_300dp">300.00dp</dimen>
+    <dimen name="dimen_315dp">315.00dp</dimen>
+    <dimen name="dimen_319dp">319.00dp</dimen>
+    <dimen name="dimen_328dp">328.00dp</dimen>
+    <dimen name="dimen_330dp">330.00dp</dimen>
+    <dimen name="dimen_343dp">343.00dp</dimen>
+    <dimen name="dimen_350dp">350.00dp</dimen>
+    <dimen name="dimen_360dp">360.00dp</dimen>
+    <dimen name="dimen_367dp">367.00dp</dimen>
+
+    <dimen name="dimen_2sp">2.00sp</dimen>
+    <dimen name="dimen_8sp">8.00sp</dimen>
+    <dimen name="dimen_9sp">9.00sp</dimen>
+    <dimen name="dimen_10sp">10.00sp</dimen>
+    <dimen name="dimen_11sp">11.00sp</dimen>
+    <dimen name="dimen_12sp">12.00sp</dimen>
+    <dimen name="dimen_13sp">13.00sp</dimen>
+    <dimen name="dimen_14sp">14.00sp</dimen>
+    <dimen name="dimen_15sp">15.00sp</dimen>
+    <dimen name="dimen_16sp">16.00sp</dimen>
+    <dimen name="dimen_17sp">17.00sp</dimen>
+    <dimen name="dimen_18sp">18.00sp</dimen>
+    <dimen name="dimen_19sp">19.00sp</dimen>
+    <dimen name="dimen_20sp">20.00sp</dimen>
+    <dimen name="dimen_21sp">21.00sp</dimen>
+    <dimen name="dimen_22sp">22.00sp</dimen>
+    <dimen name="dimen_23sp">23.00sp</dimen>
+    <dimen name="dimen_24sp">24.00sp</dimen>
+    <dimen name="dimen_25sp">25.00sp</dimen>
+    <dimen name="dimen_26sp">26.00sp</dimen>
+    <dimen name="dimen_27sp">27.00sp</dimen>
+    <dimen name="dimen_28sp">28.00sp</dimen>
+    <dimen name="dimen_29sp">29.00sp</dimen>
+    <dimen name="dimen_30sp">30.00sp</dimen>
+    <dimen name="dimen_32sp">32.00sp</dimen>
+    <dimen name="dimen_34sp">34.00sp</dimen>
+    <dimen name="dimen_36sp">36.00sp</dimen>
+    <dimen name="dimen_40sp">40.00sp</dimen>
+    <dimen name="dimen_47sp">47.00sp</dimen>
+    <dimen name="dimen_50sp">50.00sp</dimen>
+    <dimen name="dimen_52sp">52.00sp</dimen>
+    <dimen name="dimen_56sp">56.00sp</dimen>
+    <dimen name="dimen_60sp">60.00sp</dimen>
+    <dimen name="dimen_72sp">72.00sp</dimen>
+    <dimen name="dimen_284dp">284dp</dimen>
+    <dimen name="dimen_160dp">160dp</dimen>
+    <dimen name="dimen_156dp">156dp</dimen>
+    <dimen name="dimen_5sp">5sp</dimen>
+    <dimen name="dimen_4sp">4sp</dimen>
+    <dimen name="dimen_192dp">192dp</dimen>
+    <dimen name="dimen_6sp">6sp</dimen>
+    <dimen name="dimen_1_33dp">1.33dp</dimen>
+
+    <dimen name="dimen_214dp">214dp</dimen>
+    <dimen name="dimen_164dp">164dp</dimen>
+
+    <dimen name="design_bottom_navigation_active_text_size" tools:override="true">12sp</dimen>
+    <dimen name="dimen_88sp">80sp</dimen>
+    <dimen name="dimen_366dp">366dp</dimen>
+    <dimen name="dimen_347dp">347dp</dimen>
+    <dimen name="dimen_238dp">238dp</dimen>
+    <dimen name="dimen_194dp">194dp</dimen>
+    <dimen name="dimen_1_5dp">1.5dp</dimen>
+    <dimen name="dimen_1sp">1sp</dimen>
+
 </resources>
