--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,12 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">
 
-        <!--<com.google.android.material.appbar.AppBarLayout
+        <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBarMain"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
@@ -29,7 +30,7 @@
                     android:background="?attr/colorPrimary"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        </com.google.android.material.appbar.AppBarLayout>-->
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/mainContainerView"
