--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,23 +8,93 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="@dimen/dimen_40dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#C32121"
+            tools:ignore="HardcodedText"
+            android:paddingHorizontal="@dimen/dimen_40dp"
             tools:context=".features.login.LoginFragment">
 
-
-        <TextView
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:id="@+id/testText"
+        <ImageView
+                android:layout_marginTop="@dimen/dimen_40dp"
+                android:id="@+id/imgSignIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/hello_blank_fragment"
-                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@null"
+                android:src="@mipmap/ic_launcher"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+                android:id="@+id/textLogin"
+                style="@style/TitleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Đăng nhập"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imgSignIn" />
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutPhoneNumberLogin"
+                style="@style/InputTextCommon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                app:layout_constraintTop_toBottomOf="@id/textLogin">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputPhoneNumberLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutLoginPassword"
+                style="@style/InputTextCommon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                app:layout_constraintTop_toBottomOf="@id/layoutPhoneNumberLogin">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputLoginPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Password"
+                    android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnLogin"
+                style="@style/ButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                android:text="Đăng nhập"
+                app:layout_constraintTop_toBottomOf="@id/layoutLoginPassword" />
+
+        <TextView
+                android:id="@+id/textLoginForgetPass"
+                style="@style/ClickableTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_8dp"
+                android:text="Quên mật khẩu"
+                app:layout_constraintTop_toBottomOf="@id/btnLogin" />
+
+        <TextView
+                android:id="@+id/textSuggestRegister"
+                style="@style/ClickableTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_8dp"
+                android:text="Chưa có tài khoản. Đăng ký"
+                app:layout_constraintTop_toBottomOf="@id/textLoginForgetPass" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
