--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -3,7 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/main_nav"
-        app:startDestination="@id/blankFragment">
+        app:startDestination="@id/loginFragment">
 
     <fragment
             android:id="@+id/loginFragment"
@@ -15,4 +15,9 @@
             android:name="com.udacity.shoestore.features.login.BlankFragment"
             android:label="BlankFragment"
             tools:layout="@layout/fragment_blank" />
+    <fragment
+            android:id="@+id/registerFragment"
+            android:name="com.udacity.shoestore.features.register.RegisterFragment"
+            android:label="RegisterFragment"
+            tools:layout="@layout/fragment_register" />
 </navigation>
