--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -15,5 +17,43 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="ButtonStyle">
+        <item name="backgroundTint">@color/color_4898C6</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">@dimen/dimen_10dp</item>
+        <item name="android:paddingTop">@dimen/dimen_16dp</item>
+        <item name="android:paddingBottom">@dimen/dimen_16dp</item>
+        <item name="android:textSize">@dimen/dimen_16sp</item>
+    </style>
+
+    <style name="ClickableTextView">
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:paddingTop">@dimen/dimen_6dp</item>
+        <item name="android:paddingBottom">@dimen/dimen_6dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/color_4898C6</item>
+        <item name="android:textSize">@dimen/dimen_14dp</item>
+    </style>
+
+    <style name="TitleTextView">
+        <item name="android:textColor">@color/color_4898C6</item>
+        <item name="android:textSize">@dimen/dimen_24sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="InputTextCommon">
+        <item name="boxCornerRadiusBottomStart">@dimen/dimen_10dp</item>
+        <item name="boxCornerRadiusTopStart">@dimen/dimen_10dp</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/dimen_10dp</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/dimen_10dp</item>
+        <item name="counterOverflowTextColor">@color/color_4898C6</item>
+        <item name="android:textColorHint">@color/color_4898C6</item>
+        <item name="boxStrokeColor">@color/color_4898C6</item>
+        <item name="boxBackgroundColor">@color/color_C8E3FF</item>
+    </style>
 
 </resources>
