--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#00BCD4</color>
+    <color name="colorPrimaryDark">#0097A7</color>
+    <color name="colorAccent">#FFF34A87</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_4898C6">#4898c6</color>
     <color name="color_C8E3FF">#C8E3FF</color>
+
+    <color name="color_0097A7">#0097A7</color>
+    <color name="color_00BCD4">#00BCD4</color>
+    <color name="color_01BCD4">#01BCD4</color>
 </resources>
