--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,9 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+                name="shareViewModelLogin"
+                type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Đăng nhập"
+                android:text="@string/login"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/imgSignIn" />
@@ -49,7 +51,8 @@
                     android:id="@+id/inputPhoneNumberLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
+                    android:hint="@string/email"
+                    android:text="test@mail.com"
                     android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,7 +68,8 @@
                     android:id="@+id/inputLoginPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="@string/password"
+                    android:text="123456"
                     android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -75,7 +79,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_16dp"
-                android:text="Đăng nhập"
+                android:text="@string/login"
+                android:onClick="@{() -> shareViewModelLogin.startNextLoginScreen()}"
                 app:layout_constraintTop_toBottomOf="@id/layoutLoginPassword" />
 
         <TextView
@@ -84,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_8dp"
-                android:text="Quên mật khẩu"
+                android:text="@string/forget_password"
                 app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 
         <TextView
@@ -93,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_8dp"
-                android:text="Chưa có tài khoản. Đăng ký"
+                android:text="@string/suggest_register"
                 app:layout_constraintTop_toBottomOf="@id/textLoginForgetPass" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
