--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,25 +5,28 @@
 
     <data>
 
+        <variable
+                name="shareViewModelRegister"
+                type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="@dimen/dimen_40dp"
             android:paddingHorizontal="@dimen/dimen_40dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".features.register.RegisterFragment">
 
         <ImageView
+                android:layout_marginTop="@dimen/dimen_40dp"
                 android:id="@+id/imgSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@null"
                 android:src="@mipmap/ic_launcher"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.08" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
                 android:id="@+id/textRegister"
@@ -31,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Tạo tài khoản"
+                android:text="@string/register"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/imgSignUp" />
@@ -48,7 +51,7 @@
                     android:id="@+id/inputEmailRegister"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
+                    android:hint="@string/email"
                     android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -64,7 +67,7 @@
                     android:id="@+id/inputPasswordRegister"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Mật khẩu"
+                    android:hint="@string/password"
                     android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -74,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_16dp"
-                android:text="Đăng ký"
+                android:text="@string/register"
                 app:layout_constraintTop_toBottomOf="@id/layoutPassword" />
 
         <TextView
@@ -83,7 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_8dp"
-                android:text="Có tài khoản. Đăng nhập"
+                android:text="@string/suggest_login"
                 app:layout_constraintTop_toBottomOf="@id/btnRegister" />
 
         <TextView
@@ -92,7 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_8dp"
-                android:text="Quên mật khẩu"
+                android:text="@string/forget_password"
                 app:layout_constraintTop_toBottomOf="@id/textSuggestLogin" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
