--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -78,6 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_16dp"
                 android:text="@string/register"
+                android:onClick="@{() -> shareViewModelRegister.goToShoeListScreen()}"
                 app:layout_constraintTop_toBottomOf="@id/layoutPassword" />
 
         <TextView
