--- a/app/src/main/res/layout/fragment_instruction.xml
+++ b/app/src/main/res/layout/fragment_instruction.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-                name="shareViewModelInstruction"
-                type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />
+                name="instructionViewModel"
+                type="com.udacity.shoestore.features.instruction.InstructionViewmodel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_80dp"
-                android:text="@string/shopping"
+                android:text="@string/shopping_ins"
                 app:layout_constraintTop_toBottomOf="@id/textInstructionTitle" />
 
 
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_16dp"
                 android:text="@string/next"
-                android:onClick="@{() -> shareViewModelInstruction.startNextWelcomeScreen()}"
+                android:onClick="@{() -> instructionViewModel.goToShoeListScreen()}"
                 android:layout_marginBottom="@dimen/dimen_80dp"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
