--- a/app/src/main/res/layout/fragment_shoes_list.xml
+++ b/app/src/main/res/layout/fragment_shoes_list.xml
@@ -25,8 +25,8 @@
                 android:backgroundTint="@color/colorAccent"
                 android:contentDescription="@null"
                 android:focusable="true"
-                android:onClick="@{()-> shareViewModelShoesList.startNextLoginScreen()}"
                 android:src="@drawable/ic_add"
+                android:onClick="@{() -> shareViewModelShoesList.openAddShoeScreen()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -34,6 +34,7 @@
                 android:id="@+id/shoesListScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_0dp"
+                android:fillViewport="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
