--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -15,16 +15,16 @@
                 app:destination="@id/registerFragment" />
         <action
                 android:id="@+id/action_loginFragment_to_welcomeFragment"
-                app:destination="@id/welcomeFragment" />
+                app:destination="@id/welcomeFragment"
+                app:popUpTo="@id/welcomeFragment"
+                app:popUpToInclusive="false"
+                app:launchSingleTop="false" />
     </fragment>
     <fragment
             android:id="@+id/welcomeFragment"
             android:name="com.udacity.shoestore.features.welcome.WelcomeFragment"
             android:label="WelcomeFragment"
             tools:layout="@layout/fragment_welcome">
-        <action
-                android:id="@+id/action_welcomeFragment_to_registerFragment"
-                app:destination="@id/registerFragment" />
         <action
                 android:id="@+id/action_welcomeFragment_to_instructionFragment"
                 app:destination="@id/instructionFragment" />
@@ -39,19 +39,33 @@
                 app:destination="@id/loginFragment" />
         <action
                 android:id="@+id/action_registerFragment_to_welcomeFragment"
-                app:destination="@id/welcomeFragment" />
-        <action
-                android:id="@+id/action_registerFragment_to_shoesListFragment"
-                app:destination="@id/shoesListFragment" />
+                app:destination="@id/welcomeFragment"
+                app:popUpTo="@id/welcomeFragment"
+                app:launchSingleTop="false"
+                app:popUpToInclusive="true" />
     </fragment>
     <fragment
             android:id="@+id/instructionFragment"
             android:name="com.udacity.shoestore.features.instruction.InstructionFragment"
             android:label="InstructionFragment"
-            tools:layout="@layout/fragment_instruction" />
+            tools:layout="@layout/fragment_instruction">
+        <action
+                android:id="@+id/action_instructionFragment_to_shoesListFragment"
+                app:destination="@id/shoesListFragment" />
+    </fragment>
     <fragment
             android:id="@+id/shoesListFragment"
             android:name="com.udacity.shoestore.features.shoeslist.ShoesListFragment"
             android:label="fragment_shoes_list"
-            tools:layout="@layout/fragment_shoes_list" />
+            tools:layout="@layout/fragment_shoes_list">
+
+        <action
+                android:id="@+id/action_shoesListFragment_to_addShoeFragment"
+                app:destination="@id/addShoeFragment" />
+    </fragment>
+    <fragment
+            android:id="@+id/addShoeFragment"
+            android:name="com.udacity.shoestore.features.addmore.AddShoeFragment"
+            android:label="AddShoeFragment"
+            tools:layout="@layout/fragment_add_shoe" />
 </navigation>
