--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -12,13 +12,14 @@
             tools:layout="@layout/fragment_login">
         <action
                 android:id="@+id/action_loginFragment_to_registerFragment"
-                app:destination="@id/registerFragment" />
+                app:destination="@id/registerFragment"
+                app:popUpTo="@id/loginFragment"
+                app:popUpToInclusive="true" />
         <action
                 android:id="@+id/action_loginFragment_to_welcomeFragment"
                 app:destination="@id/welcomeFragment"
-                app:popUpTo="@id/welcomeFragment"
-                app:popUpToInclusive="false"
-                app:launchSingleTop="false" />
+                app:popUpTo="@id/loginFragment"
+                app:popUpToInclusive="true" />
     </fragment>
     <fragment
             android:id="@+id/welcomeFragment"
@@ -36,12 +37,13 @@
             tools:layout="@layout/fragment_register">
         <action
                 android:id="@+id/action_registerFragment_to_loginFragment"
-                app:destination="@id/loginFragment" />
+                app:destination="@id/loginFragment"
+                app:popUpTo="@id/registerFragment"
+                app:popUpToInclusive="true" />
         <action
                 android:id="@+id/action_registerFragment_to_welcomeFragment"
                 app:destination="@id/welcomeFragment"
-                app:popUpTo="@id/welcomeFragment"
-                app:launchSingleTop="false"
+                app:popUpTo="@id/registerFragment"
                 app:popUpToInclusive="true" />
     </fragment>
     <fragment
