--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -53,7 +53,9 @@
             tools:layout="@layout/fragment_instruction">
         <action
                 android:id="@+id/action_instructionFragment_to_shoesListFragment"
-                app:destination="@id/shoesListFragment" />
+                app:destination="@id/shoesListFragment"
+                app:popUpTo="@id/shoesListFragment"
+                app:popUpToInclusive="false" />
     </fragment>
     <fragment
             android:id="@+id/shoesListFragment"
@@ -64,6 +66,10 @@
         <action
                 android:id="@+id/action_shoesListFragment_to_addShoeFragment"
                 app:destination="@id/addShoeFragment" />
+        <action
+                android:id="@+id/action_shoesListFragment_to_loginFragment"
+                app:destination="@id/loginFragment"
+                app:popUpTo="@id/loginFragment" />
     </fragment>
     <fragment
             android:id="@+id/addShoeFragment"
