--- a/app/src/main/res/layout/layout_item_shoe.xml
+++ b/app/src/main/res/layout/layout_item_shoe.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-                name="shareViewModelItem"
-                type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />
+                name="shoeItemData"
+                type="com.udacity.shoestore.models.Shoe" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,19 +28,41 @@
         <TextView
                 android:layout_marginStart="@dimen/dimen_12dp"
                 android:id="@+id/nameShoe"
-                style="@style/TitleTextView"
+                style="@style/TitleItemTextView"
                 android:layout_width="@dimen/dimen_0dp"
+                android:text="@{shoeItemData.name}"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_8dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/sizeShoe"
                 app:layout_constraintStart_toEndOf="@+id/imageShoe"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Kameyoko shoe" />
 
+        <!--android:text="@{shoeItemData.size}"-->
+        <TextView
+                style="@style/TitleItemTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/nameShoe"
+                android:id="@+id/sizeShoe"
+                android:maxLines="1"
+
+                android:ellipsize="end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/dimen_12dp"
+                android:layout_marginBottom="@dimen/dimen_16dp"
+                app:layout_constraintTop_toTopOf="@+id/nameShoe"
+                tools:text="12" />
+
         <TextView
                 style="@style/NormalTextView"
+                android:paddingVertical="@dimen/dimen_2dp"
                 android:id="@+id/descriptionShoe"
                 android:layout_width="@dimen/dimen_0dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:text="@{shoeItemData.description}"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/nameShoe"
@@ -48,16 +70,18 @@
                 tools:text="Detail of shoe" />
 
         <TextView
-                style="@style/TitleTextView"
-                app:layout_constraintStart_toStartOf="@id/descriptionShoe"
-                android:id="@+id/sizeShoe"
-                android:layout_width="wrap_content"
+                style="@style/NormalTextView"
+                android:paddingVertical="@dimen/dimen_2dp"
+                android:id="@+id/companyShoe"
+                android:text="@{shoeItemData.company}"
+                android:layout_width="@dimen/dimen_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dimen_30dp"
-                android:layout_marginBottom="@dimen/dimen_16dp"
-                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/nameShoe"
                 app:layout_constraintTop_toBottomOf="@+id/descriptionShoe"
-                tools:text="12" />
+                tools:text="ABC Company" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
