--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -64,12 +64,13 @@
             tools:layout="@layout/fragment_shoes_list">
 
         <action
-                android:id="@+id/action_shoesListFragment_to_loginFragment"
-                app:destination="@id/loginFragment"
-                app:popUpTo="@id/loginFragment" />
-        <action
                 android:id="@+id/action_shoesListFragment_to_addShoeFragment"
                 app:destination="@id/addShoeFragment" />
+        <action
+                android:id="@+id/action_shoesListFragment_to_loginFragment"
+                app:destination="@id/loginFragment"
+                app:popUpTo="@id/loginFragment"
+                app:popUpToInclusive="false" />
     </fragment>
     <fragment
             android:id="@+id/addShoeFragment"
